# VladotEngine

./: .gitignore  CMakeLists.txt  README.md  sex  vcpkg.json
mods/: globals.lua
mods/VladotNetwork/: info.json  init.lua
mods/base/hello10/: control.lua
mods/base/plasma_mosters/: info.json
mods/basic_player/: control.lua  data.lua  fix_note.md  info.json
mods/core/: info.json
mods/hello10/: control.lua
mods/hello10/shaders/: sprite.glsl
res/shaders/: basic.glsl  sprite.glsl
src/: main.cpp
src/engine_api/: EngineAPI.hpp
src/lua_binder/: LuaBinder.cpp  LuaBinder.hpp
src/mod_loader/: ModLoader.cpp  ModLoader.hpp
src/networking/network/: Network.cpp  Network.hpp
src/object/: Object.cpp  Object.hpp
src/object/game_object/: GameObject.cpp  GameObject.hpp
src/object/game_object/audio_player/: AudioPlayer.cpp  AudioPlayer.hpp
src/object/game_object/game_object_2d/: GameObject2D.cpp  GameObject2D.hpp
src/object/game_object/game_object_2d/custom_mesh/: CustomMesh.cpp  CustomMesh.hpp
src/object/game_object/game_object_2d/mesh_instance_2d/: MeshInstance2D.hpp
src/object/game_object/game_object_2d/sprite_2d/: Sprite2D.cpp  Sprite2D.hpp
src/object/ref_counted/: RefCounted.hpp
src/object/resource/: Resource.hpp  ResourceLoader.hpp
src/object/resource/audio_resource/: AudioResource.cpp  AudioResource.hpp
src/object/resource/material/: Material.cpp  Material.hpp
src/object/resource/mesh/: Mesh.hpp
src/object/resource/shader_resource/: ShaderResource.cpp  ShaderResource.hpp
src/object/resource/texture_resource/: TextureResource.cpp  TextureResource.hpp
src/object/scene_tree/: SceneTree.cpp  SceneTree.hpp
src/resource/: Resource.cpp  Resource.hpp  ResourceAPI.cpp  ResourceAPI.hpp
src/virtual_fs/: VirtualFS.cpp  VirtualFS.hpp
